syntax = "proto3";

package auth;

option go_package = "project/pkg/proto/auth/auth";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  User user = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string id = 1;
  string email = 2;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  bool valid = 1;
  string user_id = 2;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string bio = 4;
  string avatar_url = 5;
}

message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string bio = 3;
  string avatar_url = 4;
}

message UpdateUserResponse {
  User user = 1;
}
