syntax = "proto3";

package blog;

option go_package = "project/pkg/proto/blog";

service BlogService {
  rpc ListPosts (ListPostsRequest) returns (ListPostsResponse) {}
  rpc GetPost (GetPostRequest) returns (GetPostResponse) {}
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse) {}
  rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse) {}
  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse) {}
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  rpc ToggleClap (ToggleClapRequest) returns (ToggleClapResponse) {}
  rpc ToggleFollow (ToggleFollowRequest) returns (ToggleFollowResponse) {}
  rpc ToggleBookmark (ToggleBookmarkRequest) returns (ToggleBookmarkResponse) {}
  rpc ListNotifications (ListNotificationsRequest) returns (ListNotificationsResponse) {}
  rpc MarkNotificationRead (MarkNotificationReadRequest) returns (MarkNotificationReadResponse) {}
  rpc CreateComment (CreateCommentRequest) returns (CreateCommentResponse) {}
  rpc ListComments (ListCommentsRequest) returns (ListCommentsResponse) {}
  rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentResponse) {}
}

message Comment {
  string id = 1;
  string post_id = 2;
  string user_id = 3;
  string content = 4;
  string created_at = 5;
  User author = 6; // Enriched with author details
}



message CreateCommentRequest {
  string post_id = 1;
  string user_id = 2;
  string content = 3;
}

message CreateCommentResponse {
  Comment comment = 1;
}

message ListCommentsRequest {
  string post_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListCommentsResponse {
  repeated Comment comments = 1;
  int32 total = 2;
}

message DeleteCommentRequest {
  string comment_id = 1;
  string user_id = 2; // For authorization check
}

message DeleteCommentResponse {
  bool success = 1;
}

message Notification {
  string id = 1;
  string user_id = 2;
  string type = 3; // 'clap', 'follow', 'bookmark', 'comment'
  string actor_id = 4;
  string actor_name = 5;
  string actor_avatar_url = 6;
  string post_id = 7;
  string post_title = 8;
  string created_at = 9;
  bool read = 10;
}



message Post {
  string id = 1;
  string title = 2;
  string content = 3;
  string author_id = 4;
  string created_at = 5;
  Author author = 6;
  string cover_image = 7;
  repeated string tags = 8;
  int32 claps_count = 9;
  bool is_bookmarked = 10;
}

message Author {
  string id = 1;
  string name = 2;
  string avatar_url = 3;
  bool is_following = 4; // Computed for authenticated user
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string bio = 4;
  string avatar_url = 5;
  int32 followers = 6;
  int32 following = 7;
  bool is_following = 8; // Computed
}

message ListPostsRequest {
  int32 page = 1;
  int32 limit = 2;
  string tag = 3;
  string current_user_id = 4; // To compute is_following
  string search_query = 5; // Full-text search
}

message ListPostsResponse {
  repeated Post posts = 1;
  int32 total = 2;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
  string author_id = 3;
  repeated string tags = 4;
  string cover_image = 5;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostRequest {
  string post_id = 1;
  string current_user_id = 2; // For is_bookmarked and similar computations
}

message GetPostResponse {
  Post post = 1;
}

message UpdatePostRequest {
  string post_id = 1;
  string user_id = 2; // For authorization
  string title = 3;
  string content = 4;
  repeated string tags = 5;
  string cover_image = 6;
}

message UpdatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string post_id = 1;
  string user_id = 2; // For authorization
}

message DeletePostResponse {
  bool success = 1;
}

message ToggleClapRequest {
  string post_id = 1;
  string user_id = 2;
}

message ToggleClapResponse {
  bool clapped = 1;
  int32 claps_count = 2;
}

message ToggleFollowRequest {
  string follower_id = 1;
  string followee_id = 2;
}

message ToggleFollowResponse {
  bool following = 1;
}

message ToggleBookmarkRequest {
  string post_id = 1;
  string user_id = 2;
}

message ToggleBookmarkResponse {
  bool bookmarked = 1;
}

message ListNotificationsRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListNotificationsResponse {
  repeated Notification notifications = 1;
  int32 total = 2;
  int32 unread_count = 3;
}

message MarkNotificationReadRequest {
  string notification_id = 1;
  string user_id = 2;
}

message MarkNotificationReadResponse {
  bool success = 1;
}

message GetUserRequest {
  string id = 1;
  string current_user_id = 2;
}

message GetUserResponse {
  User user = 1;
}
